manifests/dev/kopiur/CiliumClusterwideNetworkPolicy-kopiur-mover.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: kopiur-mover
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toFQDNs:
        - matchName: fadfc390b1e5fb0ce019b9f7a8917d42.r2.cloudflarestorage.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/managed-by: kopiur
