manifests/dev/kopiur/MutatingWebhookConfiguration-kopiur-mutating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: kopiur
    app.kubernetes.io/name: kopiur
    app.kubernetes.io/part-of: kopiur
  name: kopiur-mutating
webhooks:
  - admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: kopiur-webhook
        namespace: kopiur-system
        path: /admission
        port: 443
    failurePolicy: Fail
    name: mutate.kopiur.home-operations.com
    reinvocationPolicy: IfNeeded
    rules:
      - apiGroups:
          - kopiur.home-operations.com
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - repositories
          - clusterrepositories
          - snapshotpolicies
          - snapshots
          - snapshotschedules
          - restores
          - maintenances
          - repositoryreplications
          - snapshotreplications
        scope: '*'
    sideEffects: None
    timeoutSeconds: 10
